Add domain-intrinsic cardinality tightening to SetIntervalDomain
Once |lowerBound| == maxCardinality, no further element can ever be
added without exceeding the cap, so upperBound should collapse to
lowerBound; symmetrically, once |upperBound| == minCardinality, no
candidate can be dropped without falling short, so lowerBound should
expand to upperBound. Without this, a domain like
of(Set.of(1), Set.of(1,2), 1, 1) stayed reported as non-singleton
despite only {1} actually being valid -- which matters because full
resolution to singleton via propagation alone is what will let a
set-variable CSP solve without a dedicated branching search stage
(not built yet). Runs in the compact constructor so every narrowing
path (withLowerBound/withUpperBound/withCardinality, and of() itself)
gets it for free.

Also switches bound-wrapping from LinkedHashSet to Set.copyOf, catching
a mistake in the previous commit: LinkedHashSet only preserves order
the *caller's* input already had (IntRangeDomain/EnumDomain get real
determinism because their of() builds its own canonical ascending order
internally before construction; this record just takes whatever Set<E>
a caller passes in, so wrapping it in LinkedHashSet was freezing
already-nondeterministic order, not deriving a deterministic one). E is
unbounded (no Comparable), so there's no canonical order to derive here
regardless -- deferred to whichever future consumer actually needs
deterministic enumeration (a branching solver), to sort explicitly at
its own call site, the same way toString's formatSet helper already
does for display.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>